# otus_cpp_01_01

./: CMakeLists.txt  build.sh  catch2_test_version.cpp  google_test_version.cpp  readme.md  test_version.cpp
.github/workflows/: cmake.yml
src/: main.cpp
test/: catch2_test_version.cpp  google_test_version.cpp  test_version.cpp
